Adjusted height of toast box to ensure checkout button is visible on smaller desktop screens. Adjusted desktop nav-bar layout, adding flex-start to the cart and account columns to ensure they align to the right side of the screen on desktop, this also means that the toast will sit just under the cart icon so that when the cart is adjusted the toasts appear to be connected to the cart, improving user experience.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -200,11 +200,15 @@ h3 {
     font-family: 'IBM Plex Sans', sans-serif;
     font-weight: 300;
     font-size: 2rem;
-    color: white;
+    color: #333333;
+}
+
+.white {
+    color: white !important;
 }
 
 h4 {
-    color: white;
+    color: #333333;
     font-size: 1.1rem;
 }
 
@@ -420,7 +424,7 @@ h6 {
 /*-------------------------------------------------Toasts*/
 
 .toast-body-wrapper {
-    height: 160px;
+    height: 140px;
     overflow-x: hidden;
     overflow-y: auto;
 }
